[tool.poetry]

name = "mine"
version = "1.7b1"
description = "Share application state across computers using Dropbox."

license = "MIT"

authors = ["Jace Browning <jacebrowning@gmail.com>"]

readme = "README.md"

homepage = "https://pypi.org/project/mine"
documentation = "https://mine.readthedocs.io"
repository = "https://github.com/jacebrowning/mine"

keywords = [
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: System",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]

python = "^3.6"

YORM = "^1.4"
psutil = "^2.1"
crayons = "~0.1.2"
minilog = "^0.3"

[tool.poetry.dev-dependencies]

# Formatters
black = "=19.10b0"
isort = "=4.3.21"

# Linters
mypy = "=0.730"
pydocstyle = "*"
pylint = "^2.0"

# Testing
pytest = "^3.3"
pytest-cov = "*"
pytest-describe = "*"
pytest-expecter = "*"
pytest-random = "*"
freezegun = "*"

# Reports
coveragespace = "*"

# Documentation
mkdocs = "^1.0"
pygments = "*"

# Tooling
pyinstaller = "*"
sniffer = "*"
MacFSEvents = { version = "*", platform = "darwin" }
pync = { version = "*", platform = "darwin" }

[tool.poetry.scripts]

mine = "mine.cli:main"

[tool.black]

target-version = ["py36", "py37"]
skip-string-normalization = true

[build-system]

requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
