[tool.poetry]

name = "mine"
version = "2.0b1"
description = "Share application state across computers using Dropbox."

license = "MIT"

authors = ["Jace Browning <jacebrowning@gmail.com>"]

readme = "README.md"

homepage = "https://pypi.org/project/mine"
documentation = "https://mine.readthedocs.io"
repository = "https://github.com/jacebrowning/mine"

keywords = [
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: System",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]

python = "^3.7"

YORM = "^1.4"
psutil = ">=2.1,<6.0"
crayons = "~0.1.2"
minilog = "^0.3"
universal-startfile = "*"

[tool.poetry.dev-dependencies]

# Formatters
black = "=20.8b1"
isort = "=5.6.4"

# Linters
mypy = "^0.812"
pydocstyle = "*"
pylint = "^2.0"

# Testing
pytest = "^5.3.5"
pytest-cov = "*"
pytest-describe = "*"
pytest-expecter = "*"
pytest-random = "*"
freezegun = "*"

# Reports
coveragespace = "^3.1"

# Documentation
mkdocs = "^1.3"
pygments = "*"

# Tooling
pyinstaller = "*"
sniffer = "*"
MacFSEvents = { version = "*", platform = "darwin" }
pync = { version = "*", platform = "darwin" }
ipython = "^7.16.3"

[tool.poetry.scripts]

mine = "mine.cli:main"

[tool.black]

target-version = ["py36", "py37"]
skip-string-normalization = true

[build-system]

requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
